# ergo

./: .gitignore  .yi_run_compile_out.c  MEMORY.md  README.md  TODO.md  build.sh  class_test  class_test.c  ergo.cogito.Calc  ergo.cogito.Gallery  ergo_cli.py  ergo_run.c  fizzbuzz  fizzbuzz.c  gui_gallery  gui_hello  hello  hello.c  io.github.lainsce.Quilter  json_parse_demo  json_parse_demo.c  meson.build  meson_options.txt  new_syntax_test.c  org.ergo.texteditor  run  test_iconbtn  test_iconbtn.ergo  usd_to_brl  usd_to_brl.c
cogito/: cogito.e  cogito.ergo  cogito.inc  cogito_dark.sum  cogito_default.css  cogito_default.sum  meson.build
cogito/c/: 00_core.inc  01_icons.inc  02_theme.inc  03_text.inc  04_datepicker.inc  05_cam16.inc  06_colorpicker.inc  07_nodes.inc  08_layout.inc  08_nodes.inc  09_interaction.inc  09_layout.inc  10_css.inc  10_interaction.inc  10_sum.inc  11_menu.inc  11_sum.inc  11_sum_cogito.inc  12_draw.inc  12_menu.inc  12_sum_cogito.inc  13_draw.inc  13_menu.inc  13_run.inc  14_draw.inc  14_run.inc  15_run.inc
cogito/c/backend/: backend.h  backend_sdl3.c
cogito/c/ensor/: ensor.inc  ensor_dynamic.inc
cogito/c/widgets/draw/: about_window.inc  active_indicator.inc  appbar.inc  avatar.inc  banner.inc  bottom_nav.inc  bottom_sheet.inc  bottom_toolbar.inc  button.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  dialog_slot.inc  divider.inc  drawing_area.inc  dropdown.inc  empty_page.inc  fab.inc  fab_menu.inc  grid.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu.inc  nav_rail.inc  popover.inc  progress.inc  scroller.inc  searchfield.inc  segmented.inc  settings_list.inc  shape.inc  (+18 more)
cogito/c/widgets/interaction/: about_window.inc  appbar.inc  avatar.inc  badge.inc  bottom_nav.inc  bottom_sheet.inc  bottom_toolbar.inc  button.inc  buttongroup.inc  carousel.inc  carousel_item.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  divider.inc  drawing_area.inc  fab.inc  fixed.inc  hstack.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu_button.inc  menu_section.inc  nav_rail.inc  popover.inc  progress.inc  scroller.inc  searchfield.inc  segmented.inc  shape.inc  side_sheet.inc  slider.inc  split_button.inc  stepper.inc  tabs.inc  textfield.inc  (+10 more)
cogito/c/widgets/intrinsic/: about_window.inc  appbar.inc  bottom_sheet.inc  bottom_toolbar.inc  button.inc  buttongroup.inc  card.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  divider.inc  dropdown.inc  fab.inc  grid.inc  iconbtn.inc  image.inc  label.inc  list.inc  nav_rail.inc  progress.inc  searchfield.inc  segmented.inc  shape.inc  side_sheet.inc  slider.inc  split_button.inc  stepper.inc  switch.inc  tabs.inc  textfield.inc  timepicker.inc  toast.inc  toasts.inc  toolbar.inc  treeview.inc
cogito/c/widgets/layout/: about_window.inc  appbar.inc  bottom_nav.inc  bottom_sheet.inc  bottom_toolbar.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  content_list.inc  (+20 more)
cogito/ergo/: _intrinsics.ergo  appbar.ergo  bottom_nav.ergo  bottom_toolbar.ergo  button.ergo  checkbox.ergo  chip.ergo  cogito_bindings.inc  cogito_build.inc  cogito_codegen.inc  cogito_codegen_new_widgets.inc  colorpicker.ergo  datepicker.ergo  dialog.ergo  dialog_slot.ergo  dropdown.ergo  fab.ergo  fixed.ergo  grid.ergo  hstack.ergo  image.ergo  label.ergo  list.ergo  nav_rail.ergo  progress.ergo  scroller.e  scroller.ergo  searchfield.e  searchfield.ergo  segmented.e  segmented.ergo  slider.ergo  state.ergo  stepper.ergo  switch.ergo  tabs.ergo  textfield.e  textfield.ergo  textview.ergo  toast.e  (+9 more)
cogito/examples/: cogito_examples.sum  gui_gallery.ergo  gui_hello.e  gui_hello.ergo  gui_kitchensink.e  gui_kitchensink.ergo
cogito/examples/sum_validator_fixtures/: cycle_a.sum  cycle_b.sum  theme.sum
cogito/include/: cogito.h
cogito/src/: cogito.c  cogito.h  ergo_compat.c
ergo/: meson.build
ergo/examples/: array_ops.ergo  feature_smoke.ergo  fizzbuzz.ergo  guard_example.ergo  hello.ergo  namespaced_imports.ergo  null_and_bool.ergo  short_circuit.ergo  string_features.ergo  writef_demo.ergo
ergo/src/: arena.c  ast.h  codegen.c  cogito_bindings.inc  cogito_build.inc  cogito_resolve.inc  diag.c  lexer.c  lexer.h  main.c  parser.c  parser.h  platform.c  platform.h  project.c  runtime.inc  runtime_embedded.h  stdr.inc  str.h  sum_validate.c  typecheck.c  typecheck.h
ergo/src/stdlib/: cogito.ergo  math.ergo  stdr.ergo
ergo/tests/lint/: index_to_nonnull_assignment.ergo  index_with_coalesce_ok.ergo  missing_return.ergo  run.sh  safe_return.ergo  truthiness_warning.ergo
ergo/tools/: gen_runtime_embedded.sh
src/: arena.h  ast.h  codegen.c  cogito_bindings.inc  cogito_build.inc  cogito_resolve.inc  diag.c  file.c  file.h  init.yi  lexer.c  lexer.h  lexer.yi  main.c  meson.build  parser.c  parser.h  parser.yi  platform.c  project.c  project.h  runtime.inc  runtime_embedded.h  stdr.inc  str.h  sum_validate.c  sum_validate.h  typecheck.c  typecheck.h
src/bootstrap/: arena.h  ast.h  codegen.c  codegen.h  cogito_bindings.inc  cogito_build.inc  cogito_resolve.inc  diag.c  diag.h  external_module.c  file.h  lexer.c  lexer.h  main.c  meson.build  parser.c  platform.h  project.c  project.h  runtime.inc  runtime_embedded.h  stdr.inc  sum_validate.c  typecheck.c  typecheck.h  vec.h
src/bootstrap/stdlib/: json.yi  math.yi  net.yi  stdr.yi
src/bootstrap/tools/: gen_runtime_embedded.sh
src/ergo/: __init__.py  ast.h  ast.py  codegen.c  codegen.h  codegen.py  cogito_bindings.inc  diag.c  diag.h  file.c  file.h  lexer.c  lexer.h  lexer.py  main.c  main.py  parser.c  parser.py  platform.c  project.c  project.h  runtime.inc  str.c  typecheck.c  typecheck.h  typechecker.py  vec.h
src/ergo/cogito/: cogito.inc  cogito_dark.css  cogito_default.css
src/ergo/stdlib/: __init__.py  cogito.e  cogito.ergo  cogito_default.css  math.e  math.ergo  stdr.e  stdr.ergo
src/stdlib/: base64.yi  datetime.yi  ffmpeg.yi  json.yi  math.yi  net.yi  poppler.yi  regex.yi  stdr.ergo  stdr.yi
(+150 files in other folders)
